Migrate to JDK 21